src/test/compile-fail/multiple-main.rs
fn main() {
}

mod foo {
    fn main() { //~ ERROR multiple 'main' functions
    }
}